--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p class="desc">Fast and easy GUI for <a href="https://github.com/yt-dlp/yt-dlp">yt-dlp</a></p>
 
     <div class="screenshot">
-      <img id="app-screenshot" src="" alt="Screenshot App" width="50" height="280">
+      <img id="app-screenshot" src="" alt="Screenshot App" width=auto height="280">
     </div>
 
     <div class="buttons">
